--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,32 @@
 /* Home */
 
+body,
+html {
+  height: 100%; /* Ensure the html and body are full height */
+  margin: 0;
+  padding: 0;
+}
+
+/* Add this new rule: */
+.page-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .main-frame {
   background-color: #ffffff;
-  justify-content: center;
-  height: 100vh;
+  flex-grow: 1; /* This makes the main content grow to take up any remaining space */
 }
 
 .content-wrapper {
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-  padding: 60px 20px;
+  padding: 55px 90px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-}
-
-.name,
-.role,
-.description,
-.socials-label {
-  margin-bottom: 20px;
 }
 
 .text-section {
@@ -85,16 +91,6 @@
   height: 4px;
   object-fit: cover;
   margin-bottom: 20px;
-}
-
-.socials-label {
-  color: #000000;
-  font-family: "Inter", Helvetica;
-  font-size: 20px;
-  font-weight: 200;
-  letter-spacing: 2.2px;
-  white-space: nowrap;
-  width: 367px;
 }
 
 /* Navbar */
@@ -162,7 +158,8 @@
 
 .skills-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
   padding: 20px;
   background-size: cover;
 }
@@ -178,9 +175,8 @@
 
 .skills-container .skill-set {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
   gap: 20px;
+  align-items: center; /* Add this line */
 }
 
 .skills-container .skill {
@@ -192,51 +188,166 @@
   white-space: nowrap;
 }
 
-@media screen and (max-width: 768px) {
-  .skills-container {
-    padding: 40px;
-  }
-}
-
-.social-links-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  padding: 20px 0;
-}
-
-.social-links-container .social-link {
-  color: #000000;
-  font-family: "Inter", Helvetica;
-  font-size: 16px;
-  font-weight: 300;
-  white-space: nowrap;
-}
-
-.social-links-container .icon-circle,
-.social-links-container .icon-circle-linkedin {
-  width: 27px;
-  height: 27px;
-}
-
-.line-container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 200px;
+  position: relative;
+}
+
+.layer {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
   margin: auto;
 }
 
 .line {
   height: 2px;
   background-color: black;
-  margin: 10px;
+  position: absolute;
 }
 
-.layer {
+.text-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: auto;
+  position: relative;
+  z-index: 1;
+  align-items: center; /* Center the content vertically */
+}
+
+/* Social Links */
+
+.social-link {
+  color: #000;
+  font-size: 16px;
+  font-family: "Inter", Helvetica;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.icon-circle {
+  width: 27.163px;
+  height: 24px;
+}
+
+@media screen and (max-width: 768px) {
+  /* The content-wrapper's padding might be too large for smaller screens, so we reduce it here */
+  .content-wrapper {
+    padding: 20px;
+  }
+
+  /* Reduce font size for smaller screens */
+  .name {
+    font-size: 30px;
+  }
+
+  .role {
+    font-size: 24px;
+  }
+
+  .description {
+    font-size: 16px;
+  }
+
+  .text-section,
+  .image-section {
+    width: 100%;
+  }
+
+  .content-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* About Me */
+
+.box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.box-wrapper {
+  border: 0px none;
+  height: 386px;
+  width: 559px;
+}
+
+.box .frame {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: fit-content;
+}
+
+.box .text-wrapper {
+  color: #000000;
+  font-family: "Inter-Bold", Helvetica;
+  font-size: 70px;
+  font-weight: 700;
+  height: 85px;
+  letter-spacing: 3.85px;
+  line-height: normal;
+  margin-top: -1px;
+  position: relative;
+  width: 435px;
+}
+
+.box .birthdate {
+  color: #000000;
+  font-family: "Inter-Light", Helvetica;
+  font-size: 32px;
+  font-weight: 300;
+  height: 61px;
+  letter-spacing: 3.36px;
+  line-height: 51.4px;
+  position: relative;
+  white-space: nowrap;
+  width: 321px;
+}
+
+.box .city {
+  color: #000000;
+  font-family: "Inter-Light", Helvetica;
+  font-size: 22px;
+  font-weight: 300;
+  height: 37px;
+  letter-spacing: 2.31px;
+  line-height: 35.3px;
+  position: relative;
+  white-space: nowrap;
+  width: 175px;
+}
+
+.box .name {
+  color: #000000;
+  font-family: "Inter-Medium", Helvetica;
+  font-size: 20px;
+  font-weight: 500;
+  height: 30px;
+  letter-spacing: 2.1px;
+  line-height: 32.1px;
+  position: relative;
+  white-space: nowrap;
+  width: 373px;
+}
+
+.box .about-me {
+  color: #000000;
+  font-family: "Inter-Light", Helvetica;
+  font-size: 20px;
+  font-weight: 300;
+  height: 109px;
+  letter-spacing: 2.1px;
+  line-height: 32.1px;
+  position: relative;
+  width: 540px;
 }
