--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ html {
 .hero {
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  padding: 140px;
 }
 
 .hero .time-version {
@@ -58,7 +58,7 @@ html {
   display: flex;
   justify-content: center; /* Center horizontally */
   flex-grow: 1; /* Allows this div to take up remaining space */
-  padding: 100px;
+  padding: 50px;
 }
 
 .hero .name {
@@ -80,7 +80,109 @@ html {
 .hero-description {
   font-weight: 400px;
   font-size: 20px;
-  width: 512px;
+  width: 502px;
+}
+
+/* About */
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+.about .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 40%;
+}
+
+.about .title {
+  font-size: 70px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 3.85px;
+}
+
+.about .birthdate {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 160.523%;
+  letter-spacing: 3.15px;
+}
+
+.about .city {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 160.523%;
+  letter-spacing: 2.31px;
+}
+
+.about .name {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 160.523%;
+  letter-spacing: 2.1px;
+}
+
+.about .about-me {
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 160.523%;
+  letter-spacing: 2.1px;
+  width: 437px;
+}
+
+.about .young {
+  height: 200px;
+  object-fit: cover;
+  width: 202px;
+  border-radius: 50%;
+}
+
+.about .young-wrapper {
+  padding-right: 100px;
+}
+
+.about .old {
+  height: 190px;
+  object-fit: cover;
+  width: 197px;
+  border-radius: 50%;
+}
+
+.old-section {
+  padding-top: 160px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 100px;
+}
+
+.hobbies-title {
+  padding-top: 30px;
+  font-size: 28px;
+  font-weight: 400;
+  letter-spacing: 3.36px;
+  line-height: normal;
+  text-align: center;
+  width: 240px;
+}
+
+.hobbies {
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 4.44px;
+  line-height: normal;
+  width: 200px;
 }
 
 /* Navbar */
@@ -92,6 +194,11 @@ html {
   height: 50px;
   padding: 30px 20px;
   box-sizing: border-box;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  background-color: #fff; /* New Line */
+  opacity: 80%;
 }
 
 .navbar .left-side {
@@ -149,6 +256,70 @@ html {
   height: 4px;
   object-fit: cover;
   margin-bottom: 20px;
+}
+
+/* Projects */
+
+.project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project .project-section {
+  margin-bottom: 30px;
+}
+
+.project .project-wrapper {
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
+
+.project .projects {
+  font-size: 48px;
+  font-weight: 700;
+  letter-spacing: 2.64px;
+  line-height: normal;
+  white-space: nowrap;
+  width: 287px;
+}
+
+.project .years {
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+  width: 229px;
+}
+
+.project .line {
+  border-top: 1px solid black;
+  width: 100%;
+}
+
+.project .project-details {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.project .project-title {
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 300;
+  letter-spacing: 0;
+  line-height: normal;
+  width: 214px;
+}
+
+.project .project-category {
+  color: #000000;
+  font-family: "Inter-MediumItalic", Helvetica;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: normal;
+  width: 118px;
 }
 
 /* Skills Container */
