--- a/src/App.css
+++ b/src/App.css
@@ -340,6 +340,59 @@ html {
   width: 118px;
 }
 
+/* Project Modal */
+
+.project-modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.project-modal {
+  background: white;
+  border-radius: 10px;
+  max-width: 1200px;
+  max-height: 600px;
+  width: 90%;
+  height: 90%;
+  padding: 20px;
+  position: relative;
+  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+}
+
+.project-modal-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.modal-left {
+  flex-basis: 40%;
+  padding-right: 10px;
+}
+
+.modal-right {
+  flex-basis: 60%;
+  padding-left: 10px;
+}
+
+.modal-right img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.modal-about {
+  width: 50%;
+}
+
 /* Skills Container */
 
 .skills-container {
