--- a/src/App.css
+++ b/src/App.css
@@ -859,6 +859,13 @@ body {
   background-size: cover;
 }
 
+.skill-set a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
 .skills-container .title {
   color: #000000;
   font-family: "Inter", Helvetica;
@@ -1216,6 +1223,7 @@ body {
 
 /* Social Links */
 
+/* Existing styles */
 .social-link {
   color: #000;
   font-size: 16px;
@@ -1223,9 +1231,30 @@ body {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+  display: inline-block; /* Ensure it's an inline-block */
 }
 
 .icon-circle {
+  margin: 0;
   width: 27.163px;
   height: 24px;
+  margin-left: 10px;
+}
+
+/* New styles to handle <a> tags */
+.social-link a,
+.icon-circle a {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: none;
+  cursor: pointer;
+}
+
+.social-link a:hover,
+.icon-circle a:hover {
+  text-decoration: none;
 }
